# aws-lambda-python-packager

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  aws_lambda_python_packager.cli.html  aws_lambda_python_packager.html  bumpversion  generate_docs  genindex.html  index.html  lambda-packager.html  modules.html  objects.inv  project_init.sh  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml
.config/: .bumpversion.cfg  .changelog.tpl  .flake8  .gitchangelog.rc  .pylintrc
.github/workflows/: codeql-analysis.yml  docs.yml  python-publish.yml
_modules/: aws_lambda_python_packager.html  index.html
_modules/aws_lambda_python_packager/: arrow_fetcher.html  aws_wrangler.html  dep_analyzer.html  lambda_packager.html  log_formatter.html  pip_analyzer.html  poetry_analyzer.html  util.html
_modules/aws_lambda_python_packager/cli/: build.html  unify.html
_sources/: aws_lambda_python_packager.rst.txt  index.rst.txt  lambda-packager.rst.txt  modules.rst.txt
_static/: documentation_options.js
docs/source/: aws_lambda_python_packager.cli.rst  aws_lambda_python_packager.rst  conf.py  index.rst  modules.rst
src/aws_lambda_python_packager/: __init__.py  __main__.py  _log_formatter.py  arrow_fetcher.py  aws_wrangler.py  cli.py  dep_analyzer.py  lambda_packager.py  log_formatter.py  pip_analyzer.py  poetry_analyzer.py  poetry_hack.py  util.py
src/aws_lambda_python_packager/cli/: build.py  unify.py
src/python_template_repo/: app.py
tests/: __init__.py  conftest.py  test_app.py  test_arrow_fetcher.py  test_lambda_packager.py  test_util.py
tests/resources/: pyproject.toml
tests/resources/proj_pip/: requirements.txt
tests/resources/proj_poetry/: pyproject.toml
