[tool.poetry]
name = "test-package"
version = "0.1.0"
description = "Test Package"
authors = ["Daniel Sullivan <mumblepins@users.noreply.github.com>"]
packages = [{ include = 'test_package' }]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
awswrangler = "*"
boto3 = "1.20.32"
test-pypi-package-9hfklcw8fq = { version = "^0.1.2", source = "gitlab_test" }

[build-system]
requires = ["poetry-core>=1.1.0a7"]
build-backend = "poetry.core.masonry.api"

[tool.aws-deployment.source.gitlab_test]
username = "gitlab+deploy-token-1133237"
password = "Mtkgy8WPxaaCyAcULBjj"

[[tool.poetry.source]]
name = 'gitlab_test'
# read only package registry token only
# gitlab+deploy-token-1133237:Mtkgy8WPxaaCyAcULBjj@
url = 'https://gitlab.com/api/v4/projects/37091437/packages/pypi/simple'
secondary = true
#default = false
